<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Fragments.FormFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/editNewFra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtName"
        />
    <EditText
        android:id="@+id/editLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtLastName"
        />
    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtPhone"
        />
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        />
    <Button
        android:id="@+id/btnSubmitFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveForm"
        />

</LinearLayout>