<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hint"
        android:textSize="30dp"

        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/editURL"
        android:textSize="30dp"

        />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_submit"

        />
    <Button
        android:id="@+id/btn_New"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_newSyn"
        />
    <Button
        android:id="@+id/btnNewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNewActivity"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"

        />


    <EditText
        android:id="@+id/editContent"
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:textSize="30dp"

        />
</LinearLayout>